welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:3: error: ambiguous reference to overloaded definition,
both method ecritMessage in class AbstractBuggle of type (x$1: Int)Unit
and  method ecritMessage in class AbstractBuggle of type (x$1: String)Unit
match expected type ?
	if (ecritMessage()="A") {avance();}
            ^BDRBuggle:4: error: ambiguous reference to overloaded definition,
both method ecritMessage in class AbstractBuggle of type (x$1: Int)Unit
and  method ecritMessage in class AbstractBuggle of type (x$1: String)Unit
match expected type ?
	else if (ecritMessage()="R") {droite();avance();}
                 ^BDRBuggle:5: error: ambiguous reference to overloaded definition,
both method ecritMessage in class AbstractBuggle of type (x$1: Int)Unit
and  method ecritMessage in class AbstractBuggle of type (x$1: String)Unit
match expected type ?
	else if (ecritMessage()="L") {gauche();avance();}
                 ^BDRBuggle:6: error: ambiguous reference to overloaded definition,
both method ecritMessage in class AbstractBuggle of type (x$1: Int)Unit
and  method ecritMessage in class AbstractBuggle of type (x$1: String)Unit
match expected type ?
	else if (ecritMessage()="I") {gauche();gauche();avance();}
                 ^BDRBuggle:7: error: ambiguous reference to overloaded definition,
both method ecritMessage in class AbstractBuggle of type (x$1: Int)Unit
and  method ecritMessage in class AbstractBuggle of type (x$1: String)Unit
match expected type ?
	else if (ecritMessage()="B") {avance();avance();}
                 ^BDRBuggle:8: error: ambiguous reference to overloaded definition,
both method ecritMessage in class AbstractBuggle of type (x$1: Int)Unit
and  method ecritMessage in class AbstractBuggle of type (x$1: String)Unit
match expected type ?
	else if (ecritMessage()="C") {avance();avance();avance();}
                 ^BDRBuggle:9: error: ambiguous reference to overloaded definition,
both method ecritMessage in class AbstractBuggle of type (x$1: Int)Unit
and  method ecritMessage in class AbstractBuggle of type (x$1: String)Unit
match expected type ?
	else if (ecritMessage()="Z") {recule();}
                 ^BDRBuggle:10: error: ambiguous reference to overloaded definition,
both method ecritMessage in class AbstractBuggle of type (x$1: Int)Unit
and  method ecritMessage in class AbstractBuggle of type (x$1: String)Unit
match expected type ?
	else if (ecritMessage()="X") {recule();recule();recule();}
                 ^BDRBuggle:11: error: ambiguous reference to overloaded definition,
both method ecritMessage in class AbstractBuggle of type (x$1: Int)Unit
and  method ecritMessage in class AbstractBuggle of type (x$1: String)Unit
match expected type ?
	else if (ecritMessage()="Y") {recule();recule();}
                 ^