welcome.lessons.welcome.bdr.BDR.scala.code
while (estSurMessage()) {litMessage();
	
	if (ecritMessage()="A") {avance();}
	else if (ecritMessage()="R") {droite();avance();}
	else if (ecritMessage()="L") {gauche();avance();}
	else if (ecritMessage()="I") {gauche();gauche();avance();}
	else if (ecritMessage()="B") {avance();avance();}
	else if (ecritMessage()="C") {avance();avance();avance();}
	else if (ecritMessage()="Z") {recule();}
	else if (ecritMessage()="X") {recule();recule();recule();}
	else if (ecritMessage()="Y") {recule();recule();}
}
